--- a/html/laptops.html
+++ b/html/laptops.html
@@ -1,4 +1,5 @@
-<a href="#" onclick="setAllProducts()"><strong>All Products</strong></a> | <a href="#" onclick="setTVs()">TVs</a> | <a href="#" onclick="setTablets()">Tablets</a> | <a href="#" onclick="setLaptops()">Laptops</a>  <br><br>
+<a href="#" onclick="setAllProducts()">All Products</a> | <a href="#" onclick="setTVs()">TVs</a> | <a href="#" onclick="setTablets()">Tablets</a> | <a href="#" onclick="setLaptops()"><strong>Laptops</strong></a>  <br><br>
+
 <div class="row">
   <div id ="catalog">
   <div id ="item0"></div>
