--- a/html/tvs.html
+++ b/html/tvs.html
@@ -1,23 +1,23 @@
-<a href="#" onclick="setAllProducts()">All Products</a> | <a href="" onclick="setTVs()"><strong>TVs</strong></a> | <a href="" onclick="setTablets()">Tablets</a> | <a href="" onclick="setLaptops()">Laptops</a>  <br><br>
-
+<a href="#" onclick="setAllProducts()">All Products</a> | <a href="#" onclick="setTVs()"><strong>TVs</strong></a> | <a href="#" onclick="setTablets()">Tablets</a> | <a href="#" onclick="setLaptops()">Laptops</a>  <br><br>
 
 <div class="row">
-  <div class="col-sm-3">
-    <img src="img/img01.jpg" class="img-responsive" style="width:100%" alt="Image">
-    <p class ="item">Macbook Pro 2016</p>
-  </div>
-  <div class="col-sm-3">
-    <img src="img/img02.jpg" class="img-responsive" style="width:100%" alt="Image">
-    <p class ="item">Galaxy Tab T3</p>
-  </div>
-  <div class="col-sm-3">
+  <div id ="catalog">
+  <div id ="item0"></div>
+  <div id ="item1"></div>
+  <div id ="item2"></div>
+  <div id ="item3"></div>
+  <div id ="item4"></div>
+  <div id ="item5"></div>
+  <div id ="item6"></div>
+  <div id ="item7"></div>
+  <div id ="item8"></div>
+  <div id ="item9"></div>
+  <div id ="item10"></div>
+  <div id ="item11"></div>
+  <div id ="item12"></div>
+  <div id ="item13"></div>
+  <div id ="item14"></div>
+  <div id ="item15"></div>
 
-    <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    <p>Some text..</p>
-  </div>
-  <div class="col-sm-3">
-
-    <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    <p>Some text..</p>
-  </div>
+</div>
 </div>
